@@ -5,5 +5,6 @@
 		<property name='HTTPS' nameLabel="YouTube_Addon_property_https" type='boolean'/>
 		<property name='ID' nameLabel="YouTube_Addon_property_id" type='string'/>
 		<property name='URL' nameLabel="YouTube_Addon_property_url" type='string'/>
+        <property name='Offline message' nameLabel="YouTube_Addon_property_offline_message" type='string'/>
 	</model>
 </addon>
