@@ -1,3 +1,4 @@
+2015-06-25 Added handling offline connection in YouTube module
 2015-06-25 Fixed dragging on Windows 8 in Graph module
 2015-06-24 Fixed issue with transparency on Check and Show Answers in Image Gap module
 2015-06-24 Fixed issue with dragging in Sourcelist and Imagesource modules
